{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "03fc6a17-6131-0534-4e5a-a5f5b34617fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088f92cc497b7484e",
            "arn": "arn:aws:ec2:us-east-1:715841344869:elastic-ip/eipalloc-088f92cc497b7484e",
            "association_id": "eipassoc-0952222ebca73e7a1",
            "domain": "vpc",
            "id": "eipalloc-088f92cc497b7484e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07a9391168cd51661",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-222-59-23.compute-1.amazonaws.com",
            "public_ip": "3.222.59.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:internet-gateway/igw-05e7c311cdac125a7",
            "id": "igw-05e7c311cdac125a7",
            "owner_id": "715841344869",
            "tags": {
              "Name": "vpc-igw-homolog"
            },
            "tags_all": {
              "Name": "vpc-igw-homolog"
            },
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-088f92cc497b7484e",
            "association_id": "eipassoc-0952222ebca73e7a1",
            "connectivity_type": "public",
            "id": "nat-08911ef13747d2b6a",
            "network_interface_id": "eni-07a9391168cd51661",
            "private_ip": "10.0.1.95",
            "public_ip": "3.222.59.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0699881e7df935e19",
            "tags": {
              "Name": "vpc-nat-homolog"
            },
            "tags_all": {
              "Name": "vpc-nat-homolog"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:route-table/rtb-012d13d01beb7e610",
            "id": "rtb-012d13d01beb7e610",
            "owner_id": "715841344869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08911ef13747d2b6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada-homolog"
            },
            "tags_all": {
              "Name": "rt-privada-homolog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:route-table/rtb-033fce21194038aa4",
            "id": "rtb-033fce21194038aa4",
            "owner_id": "715841344869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e7c311cdac125a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-publica-homolog"
            },
            "tags_all": {
              "Name": "rt-publica-homolog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e079d252fcd5760",
            "route_table_id": "rtb-012d13d01beb7e610",
            "subnet_id": "subnet-07389a26b82febaeb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006bb4fcab3ae73f2",
            "route_table_id": "rtb-033fce21194038aa4",
            "subnet_id": "subnet-0699881e7df935e19"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:security-group/sg-09e3db79a4c334e80",
            "description": "Security group para aplicacao Spring Boot Java",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Porta de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e3db79a4c334e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso a API Spring Boot",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Porta adicional",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Porta do atuador Spring Boot",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg-homolog",
            "name_prefix": "",
            "owner_id": "715841344869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "java-spring-boot",
              "Environment": "homolog",
              "ManagedBy": "Terraform",
              "Name": "sg-springboot-homolog",
              "Team": "BackendTeam"
            },
            "tags_all": {
              "Application": "java-spring-boot",
              "Environment": "homolog",
              "ManagedBy": "Terraform",
              "Name": "sg-springboot-homolog",
              "Team": "BackendTeam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:security-group/sg-0191aa82b3d090057",
            "description": "Security group para banco de dados da aplicacao Spring Boot",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0191aa82b3d090057",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acesso tcp da aplicacao",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e3db79a4c334e80"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-homolog",
            "name_prefix": "",
            "owner_id": "715841344869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "java-spring-boot",
              "Environment": "homolog",
              "ManagedBy": "Terraform",
              "Name": "sg-database-homolog",
              "Team": "BackendTeam"
            },
            "tags_all": {
              "Application": "java-spring-boot",
              "Environment": "homolog",
              "ManagedBy": "Terraform",
              "Name": "sg-database-homolog",
              "Team": "BackendTeam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-07389a26b82febaeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07389a26b82febaeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-privada-homolog"
            },
            "tags_all": {
              "Name": "subnet-privada-homolog"
            },
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:subnet/subnet-0699881e7df935e19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699881e7df935e19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715841344869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-publica-homolog"
            },
            "tags_all": {
              "Name": "subnet-publica-homolog"
            },
            "vpc_id": "vpc-0dcf9cf64d51bad24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715841344869:vpc/vpc-0dcf9cf64d51bad24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0482c78cf836ff228",
            "default_route_table_id": "rtb-08ee6d2845530cef8",
            "default_security_group_id": "sg-03ed187f7eb88c4f3",
            "dhcp_options_id": "dopt-064155a5eff669e34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcf9cf64d51bad24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ee6d2845530cef8",
            "owner_id": "715841344869",
            "tags": {
              "Name": "vpc-homolog"
            },
            "tags_all": {
              "Name": "vpc-homolog"
            }
          }
        }
      ]
    }
  ]
}